--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = openai
+name = openai_zero
 version = attr: openai.version.VERSION
-description = Python client library for the OpenAI API
+description = Python library for the OpenAI API version 0.28.1 only
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = OpenAI
 author_email = support@openai.com
-url = https://github.com/openai/openai-python
+url = https://github.com/knotgrass/openai-zero
 license_files = LICENSE
 classifiers =
   Programming Language :: Python :: 3
